--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "snowpack-react-chakra-starter",
+  "version": "0.1.0",
+  "private": true,
+  "author": "sozonome",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
@@ -7,13 +11,20 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.3.4",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@fontsource/rubik": "^4.2.2",
+    "framer-motion": "^3.10.2",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "@snowpack/plugin-typescript": "^1.2.0",
+    "@snowpack/plugin-webpack": "^2.3.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/react": "^11.0.0",
     "@types/chai": "^4.2.13",
