--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.2",
+    "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "framer-motion": "^3.10.6",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
@@ -28,13 +30,15 @@
     "@testing-library/react": "^11.2.7",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
-    "@types/react": "^17.0.8",
-    "@types/react-dom": "^17.0.6",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-helmet": "^6.1.1",
+    "@types/react-router-dom": "^5.1.7",
     "@types/snowpack-env": "^2.3.2",
-    "@web/test-runner": "^0.12.20",
+    "@web/test-runner": "^0.13.11",
     "chai": "^4.3.4",
     "prettier": "^2.3.1",
-    "snowpack": "^3.4.0",
-    "typescript": "^4.3.2"
+    "snowpack": "^3.5.9",
+    "typescript": "^4.3.4"
   }
 }
