--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
+    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.5",
@@ -37,8 +39,15 @@
     "@types/snowpack-env": "^2.3.4",
     "@web/test-runner": "^0.13.12",
     "chai": "^4.3.4",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
     "snowpack": "^3.5.9",
     "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,css,scss,md,json}": [
+      "prettier --write"
+    ]
   }
 }
