--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
     "pre-commit": "lint-staged",
+    "up-latest": "yarn upgrade-interactive --latest",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -27,9 +28,9 @@
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/plugin-typescript": "^1.2.0",
-    "@snowpack/plugin-webpack": "^2.3.1",
+    "@snowpack/plugin-webpack": "^3.0.0",
     "@snowpack/web-test-runner-plugin": "^0.2.2",
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/react": "^12.0.0",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^8.2.3",
     "@types/react": "^17.0.14",
@@ -37,12 +38,12 @@
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.8",
     "@types/snowpack-env": "^2.3.4",
-    "@web/test-runner": "^0.13.12",
+    "@web/test-runner": "^0.13.15",
     "chai": "^4.3.4",
     "husky": "^7.0.0",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
-    "snowpack": "^3.5.9",
+    "snowpack": "^3.8.2",
     "typescript": "^4.3.5"
   },
   "lint-staged": {
